# HeSF-Coarsen

./: .gitattributes  .gitignore  AGENT.md  README.md  handoff.md  project_prompt.md  pyproject.toml
configs/: default.yaml  ogbn_mag_A_cpu_chunked.yaml  ogbn_mag_B_cpu_ann.yaml  ogbn_mag_C_torch_ann.yaml  sketch_chebheat_metapath.yaml  sketch_chebheat_metapath_tiny.yaml
docs/: accuracy_branch_postmortem.md  ahugc_style_baseline_next13.md  claim_boundary_next11.md  claim_boundary_next12.md  claim_boundary_next13.md  claim_boundary_next14.md  claim_boundary_next9.md  coarsening.md  freehgc_compression_ratio_check_next16.md  metapath_mass_diagnostics_next13.md  metapath_position_next14.md  metapath_retention_next12.md  next11_experiment_plan.md  next13_experiment_plan.md  next14_experiment_plan.md  next17_accuracy_branch.md  next17_model_fidelity.md  next18_accuracy_branch_decision.md  next9_experiment_plan.md  ogbn_aggregation_bottleneck_next14.md  paper_configs_next7.md  paper_configs_next9.md  paper_table_index_next11.md  paper_table_index_next12.md  sketch_methods.md  task_first_gate13_claim_boundary.md  task_first_gate13_plan.md  task_first_hesf_tc_design.md  typedhash_baseline_next14.md
experiments/: README.md  __init__.py
hesf_coarsen/: __init__.py  config.py  progress.py
tests/: gate15_test_utils.py  gate21_3_helpers.py  test_accuracy_branch_decision_rules.py  test_accuracy_full_target_protocol.py  test_adapter_manifest_pca_incomplete_without_basis.py  test_adapter_package_manifest.py  test_aggregation_exclusive_timing.py  test_aggregation_stage_timing.py  (+181 more)
(+930 files in other folders)
