[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hesf-coarsen"
version = "0.1.0"
description = "NumPy-first research prototype for heterogeneous spectral-fusion graph coarsening."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
